tests/pos/scope/closure-00.ts


/*@ b :: { number | v >= 2 } */
var b = 2; 

/*@ foo :: () => { void | true } */
function foo() { 
  assert(++b >= 2); 
}

foo();

